# mkdocs-encrypt-source-plugin

./: README.md  build-docs.sh  mkdocs.yml  mypy.ini  requirements.in  requirements.txt  setup.cfg
docs/: index.md  tests.md  usage.md
src/mkdocs_encrypt_source_plugin/: __init__.py  cli_tool.py  mkdocs_plugin.py
