[metadata]
name = mkdocs-encrypt-source-plugin
version = 0.0.1
author = six-two
author_email = pip@six-two.dev
description = Store some information encrypted in the source code and decrypt when building the site
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-encrypt-source-plugin
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    mkdocs>=1.4.0
    cryptography

[options.entry_points]
mkdocs.plugins =
    encrypt-source = mkdocs_encrypt_source_plugin.mkdocs_plugin:EncryptPlugin
console_scripts =
    mkdocs-encrypt-source-cli = mkdocs_encrypt_source_plugin.cli_tool:main

[options.packages.find]
where = src
